# rlp

./: .gitignore  CITED.md  LICENSE  PARAMS.md  README.md  VISUALISATION_PLAN.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ModelWatcher.tsx
src/: check_envs.py  dqn_ppo_comparison.py  guide.py  pyproject.toml  rppo_4stage_plot.py  rppo_comparison.py
src/api/: metrics.py  server.py  watcher.py
src/prelim/: train_cur.py  train_dumb.py
src/prelim/keydqn/: train_cur.py  train_dqn_flat_symbolic.py  train_dqn_pixels_baseline.py  train_dqn_pixels_framestack.py  train_key.py  train_key_framestack.py
src/prelim/ppo/: train_cur.py  train_ppo_baseline.py  watch_ppo.py
src/prelim/ppoflat/: train_ppo.py  train_ppo_cur.py  watch_curriculum.py
src/prelim/qlearning/: custom_minigrid_cnn.py  train_dqn_cur.py  train_dqn_custom_cnn.py  train_dqn_pixels_empty8x8.py  train_pixels.py  watch_dqn_custom_cnn.py
src/prelim/repp2/: train4stage_cur.py
src/prelim/reppo/: opentensor.py  train_rppo_6FT.py  train_rppo_baseline.py  train_rppo_curriculum.py  watch_reCur.py  watch_recurrent.py
